--- a/WebContent/WEB-INF/templates/listGrocery.html
+++ b/WebContent/WEB-INF/templates/listGrocery.html
@@ -100,7 +100,7 @@
     
  <!---------------------------RIGHT-SIDEBAR --------------------------------------->
     
-    <aside class="aside-menu">
+    <aside class="aside-menu bg-dark">
       <!-- Aside menu content here -->
       <!-- -----------------Edit / PDF / Excel Buttons -------------------------- -->
       	<div class="sidebar">
