--- a/WebContent/WEB-INF/templates/includes/bootstrap.html
+++ b/WebContent/WEB-INF/templates/includes/bootstrap.html
@@ -21,9 +21,11 @@
 body {
 	padding-top: 10px;
 	padding-bottom: 10px;
+	height:100vh;
+	
 	
 }
-
+html {height:100vh;}
 
 
 .tree li {
@@ -90,7 +92,7 @@ body {
 	border-color: #94a0b4;
 }
 
-.aside-menu {position: relative;
+.aside-menu {position: relative; 
     
     
 }
