--- a/WebContent/WEB-INF/templates/includes/sidebar.html
+++ b/WebContent/WEB-INF/templates/includes/sidebar.html
@@ -1,6 +1,6 @@
 <div th:fragment="sidebar">
 	<nav class="sidebar-nav">
-		<ul class="nav">
+		<ul class="nav border-1" >
 			<li class="nav-title">Menu</li>
 
 			<li class="nav-item"><a class="nav-link"
