--- a/WebContent/WEB-INF/templates/listFlat.html
+++ b/WebContent/WEB-INF/templates/listFlat.html
@@ -8,7 +8,7 @@
 <div th:replace="~{includes/bootstrap :: bootstrapCSS}" />
 </head>
 
-<body class="app sidebar-show aside-menu-show">
+<body class="app sidebar-show aside-menu-show bg-dark">
 	<header class="app-header">
 
 		<!---------------------------HEADER CONTENT --------------------------------------->
@@ -59,9 +59,9 @@
 
 
 		<div>
-			<table data-toggle="table" class="table table-striped">
+			<table data-toggle="table" class="table table-light text-dark table-borderless rounded mx-auto">
 
-				<thead>
+				<thead class="thead-dark">
 
 					<tr>
 						<th data-sortable="true">Flatname</th>
