--- a/WebContent/WEB-INF/templates/includes/footer.html
+++ b/WebContent/WEB-INF/templates/includes/footer.html
@@ -1,4 +1,4 @@
-<nav th:fragment="footer" class="navbar navbar-inverse navbar-fixed-bottom bg-dark">
+<nav th:fragment="footer" class="navbar navbar-inverse navbar-fixed-bottom bg-dark" style="border-top: 1px solid;">
 
 	<div class="container-fluid" >
 	
