--- a/WebContent/WEB-INF/templates/includes/searchNav.html
+++ b/WebContent/WEB-INF/templates/includes/searchNav.html
@@ -1,6 +1,6 @@
 
 <nav th:fragment="search" class="navbar navbar-inverse navbar-fixed-top bg-dark ">
-	<div class="container-fluid">
+	<div class="container-fluid" style="border-bottom: 1px solid">
 		<!-- HTML form with search textbox and submit button-->
 		
 		<form class="navbar-form navbar-left">
