--- a/WebContent/WEB-INF/templates/listComments.html
+++ b/WebContent/WEB-INF/templates/listComments.html
@@ -23,7 +23,7 @@
   
 <!---------------------------SIDEBAR CONTENT --------------------------------------->
   
-  <div class="app-body">
+  <div class="app-body" style="border-right: 1px solid;">
     <div class="sidebar">
       <!-- Sidebar content here -->
 
@@ -57,12 +57,12 @@
       	<div><h1 align="center">Comment Section</h1><br></div>
       	
       	
-      	<div>
+      	<div class ="col-sm-10 mx-auto" align="center">
       		<table data-toggle="table" class="table table-light text-dark table-borderless rounded mx-auto">
 				<thead class="thead-dark">
 
 					<tr>
-						<th data-sortable="true">User</th>
+						<th data-sortable="true" >User</th>
 						<th data-sortable="true">Date</th>
 						<th data-sortable="true">Text</th>	
 						<th sec:authorize="hasRole('ADMIN')">Actions</th>
@@ -75,13 +75,13 @@
 
 					<tr th:each="comment : ${comments}">
 						
-						<td th:text="${comment.getUser().getFirstname() + ' ' + comment.getUser().getLastname()}"></td>
-						<td th:text="${comment.date}"></td>
-						<td th:text="${comment.text}"></td>
+						<td th:text="${comment.getUser().getFirstname() + ' ' + comment.getUser().getLastname()}" align="left"></td>
+						<td th:text="${comment.date}" align="center"></td>
+						<td th:text="${comment.text}" align="center"></td>
 						
 						
 
-						<td> <a sec:authorize="hasRole('ADMIN')"
+						<td align="right"> <a sec:authorize="hasRole('ADMIN')"
 							th:href="@{/changeComment(id=${comment.id})}"><button type="button" class="btn btn-xs btn-warning cui-wrench">
 						<span aria-hidden="true"></span> Edit </button>
 						</a>
