--- a/WebContent/WEB-INF/templates/listPartyPics.html
+++ b/WebContent/WEB-INF/templates/listPartyPics.html
@@ -23,7 +23,7 @@
 
 	<!---------------------------SIDEBAR CONTENT --------------------------------------->
 
-	<div class="app-body">
+	<div class="app-body" style="border-right: 1px solid;">
 		<div class="sidebar">
 			<!-- Sidebar content here -->
 
