--- a/WebContent/WEB-INF/templates/listUsers.html
+++ b/WebContent/WEB-INF/templates/listUsers.html
@@ -23,7 +23,7 @@
   
 <!---------------------------SIDEBAR CONTENT --------------------------------------->
   
-  <div class="app-body">
+  <div class="app-body" style="border-right: 1px solid;">
     <div class="sidebar">
       <!-- Sidebar content here -->
 
@@ -57,7 +57,8 @@
       	<div><h1 align="center">Users</h1></div>
       	
       	
-      	<div>
+      	      	<div class ="col-sm-12 ">
+
       		<table data-toggle="table" class="table table-light text-dark table-borderless rounded mx-auto">
 				<thead class="thead-dark">
 
@@ -79,22 +80,22 @@
 					<!--  list all items ----------------------------------------------------------- -->
 
 					<tr th:each="user : ${users}">
-						<td th:text="${user.username}"></td>
+						<td th:text="${user.username}" align="left"></td>
 						
 						
-						<td th:text="${user.firstname}"></td>
-						<td th:text="${user.lastname}"></td>
-						<td th:text="${user.mobilenumber}"></td>
-						<td th:text="${user.email}"></td>
-						<td th:text="${#dates.format(user.birthdate,'dd.MM.yyyy')}"></td>
+						<td th:text="${user.firstname}" align="center"></td>
+						<td th:text="${user.lastname}" align="center"></td>
+						<td th:text="${user.mobilenumber}" align="center"></td>
+						<td th:text="${user.email}" align="center"></td>
+						<td th:text="${#dates.format(user.birthdate,'dd.MM.yyyy')}" align="center"></td>
 						
 
 						<!-- <td><a sec:authorize="hasRole('ADMIN')" th:href="@{/delete(id=${employee.id})}">Delete</a></td> -->
-						<td><span th:if="${user.userimage != null}"> <a
+						<td align="center"><span th:if="${user.userimage != null}"> <a
 								th:href="@{download(documentId=${user.userimage.id})}"
 								target="_blank" th:text="${user.userimage.filename}"></a>
 						</span> <span th:unless="${user.userimage != null}"> -- no file --- </span>
-						<td><a th:href="@{upload(id=${user.id})}">
+						<td align="right"><a th:href="@{upload(id=${user.id})}">
 								<button type="button" class="btn btn-xs btn-success cui-cloud-upload">
 									<span  aria-hidden="true"></span>
 									Upload
