fixed todo export where date was not displayed correctly

--- a/WebContent/WEB-INF/templates/editTodo.html
+++ b/WebContent/WEB-INF/templates/editTodo.html
@@ -44,7 +44,7 @@
 								<select th:field="*{selectedCategory}">
 									
 									<option th:each="category : ${categories}" th:value="${category}"
-										th:text="${category}">Wireframe</option>
+										th:text="${category}"></option>
 								</select>
 
 							</div>
