--- a/WebContent/WEB-INF/templates/editTodo.html
+++ b/WebContent/WEB-INF/templates/editTodo.html
@@ -41,9 +41,9 @@
 								Category </label>
 							<div class="col-md-10">
 
-								<select th:field="*{selectedCategory}">
+								<select class="form-control" name="todoCategory" id="todoCategory">
 									
-									<option th:each="category : ${categories}" th:value="${category}"
+									<option th:each="category : ${categories}" th:value="${category} ?${category.id}"
 										th:text="${category}"></option>
 								</select>
 
