--- a/WebContent/WEB-INF/templates/listTodo.html
+++ b/WebContent/WEB-INF/templates/listTodo.html
@@ -79,13 +79,13 @@
 
 					<tr th:each="todo : ${todos}">
 						<td th:text="${todo.name}" align="left"></td>
-						<td th:text="${todo.category}" align="center"></td>
+						<td th:text="${todo.getCategory().getName()}" align="center"></td>
 						<td th:text="${#dates.format(todo.date,'dd.MM.yyyy')}" align="center"></td>
 
 
 						<td sec:authorize="hasRole('ADMIN')" align="right"><a
-							th:href="@{/changeTodo(id=${todo.id})}"
-							><button type="button" class="btn btn-xs btn-warning cui-wrench"> <span
+							th:href="@{/changeTodo(id=${todo.id})}">
+							<button type="button" class="btn btn-xs btn-warning cui-wrench"> <span
 								aria-hidden="true"></span> Edit</button>
 						</a> <a th:href="@{/deleteTodo(id=${todo.id})}"><button type="button" class="btn btn-xs btn-danger cui-trash">
 							 <span
