--- a/WebContent/WEB-INF/templates/editTodo.html
+++ b/WebContent/WEB-INF/templates/editTodo.html
@@ -52,11 +52,11 @@
 
 						<!-- --------------  Date ---------------- -->
 						<div class="form-group">
-							<label for="todoDate" class="col-md-2 control-label">
+							<label class="col-md-2 control-label">
 								Date </label>
 							<div class="col-md-10">
 								<input class="form_datetime" placeholder="date" type="text" readonly name="todoDate"
-									th:value="${todo} ? ${#dates.format()todo.todoDate, 'dd.MM.yyyy')}">
+									th:value="${todo} ? ${#dates.format(todo.todoDate, 'dd.MM.yyyy')}">
 							</div>
 						</div>
 
