--- a/WebContent/WEB-INF/templates/listTodo.html
+++ b/WebContent/WEB-INF/templates/listTodo.html
@@ -79,7 +79,7 @@
 
 					<tr th:each="todo : ${todos}">
 						<td th:text="${todo.name}" align="left"></td>
-						<td th:text="${todo.getCategory().getName()}" align="center"></td>
+						<td  th:text="${todo.category}" align="center"></td>
 						<td th:text="${#dates.format(todo.date,'dd.MM.yyyy')}" align="center"></td>
 
 
