--- a/WebContent/WEB-INF/templates/about.html
+++ b/WebContent/WEB-INF/templates/about.html
@@ -26,8 +26,8 @@ em, strong {
 				<img class="card-img-top" src="https://avatars3.githubusercontent.com/u/22908228?s=400&v=4" alt="Card image cap">
 				<div class="card-body">
 					<h5 class="card-title">MrBrown1992</h5>
-					<p class="card-text">Das ist ein EIERBÄR.</p>
-					<a href="#" class="btn btn-primary">Go somewhere</a>
+					<p class="card-text"><a href="mailto:nikolaus.spiess@edu.fh-joanneum.at">aka Nikolaus Spieß</a></p>
+					<a href="https://github.com/MrBrown1992" class="btn btn-primary">Go somewhere</a>
 				</div>
 			</div>
 		</div>
@@ -38,8 +38,8 @@ em, strong {
 				<img class="card-img-top" src="https://avatars1.githubusercontent.com/u/22908403?s=400&v=4" alt="Card image cap">
 				<div class="card-body">
 					<h5 class="card-title">MrPink1992</h5>
-					<p class="card-text">Das ist kein EIERBÄR.</p>
-					<a href="#" class="btn btn-primary">Go somewhere</a>
+					<p class="card-text"><a href="mailto:maximilian.steiner@edu.fh-joanneum.at">aka Maximilian Steiner</a></p>
+					<a href="https://github.com/MrPink1992" class="btn btn-primary">Go somewhere</a>
 				</div>
 			</div>
 		</div>
