--- a/WebContent/WEB-INF/templates/listPartyPics.html
+++ b/WebContent/WEB-INF/templates/listPartyPics.html
@@ -56,13 +56,13 @@
 		</div>
 
 		 <div class="row">
-		<div th:each="pic : ${partypics}">
+		<div th:each="pic : ${picMap}">
 			<div class="col-sm">
-				<div class="card mx-auto" style="width: 18rem;">
-					<img class="card-img-top" th:src="${pic}" alt="Card image cap"></img>
+				<div class="card mx-auto text-dark" style="width: 18rem;">
+					<img class="card-img-top" th:src="${pic.getValue()}" alt="Card image cap"></img>
 					<div class="card-body">
-						<h5 class="card-title" th:text="${#request.getAttribute('imgtitle')}">Card title</h5>
-						<p class="card-text" th:text="${#request.getAttribute('imgtext')}">Quick sample text to create the card
+						<h5 class="card-title" th:text="${pic.getKey().getImgtitle()}">Card title</h5>
+						<p class="card-text" th:text="${pic.getKey().getImgtext()}">Quick sample text to create the card
 							title and make up the body of the card's content.</p>
 					</div>
 				</div>
