changed edit*.html pages and DESTROYED list comments/users..... :(

--- a/WebContent/WEB-INF/templates/listPartyPics.html
+++ b/WebContent/WEB-INF/templates/listPartyPics.html
@@ -63,8 +63,9 @@
 					<div class="card-body">
 						<h5 class="card-title" th:text="${pic.getKey().getImgtitle()}">Card title</h5>
 						<p class="card-text" th:text="${pic.getKey().getImgtext()}">Quick sample text to create the card
-							title and make up the body of the card's content.</p>
+							title and make up the body of the card's content</p>
 					</div>
+					<div class="card-footer"><a th:href="@{/deletePartyPic(id=${pic.getKey().getId()})}"> Delete</a></div>
 				</div>
 			</div>
 			<br>
