--- a/WebContent/WEB-INF/templates/addComment.html
+++ b/WebContent/WEB-INF/templates/addComment.html
@@ -11,19 +11,29 @@
 	rel="stylesheet">
 </head>
 
-<body>
-	<div class="container" role="main">
-		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
+<body class="bg-dark">
+	<div class="container bg-dark" role="main">
+
+			<div class="col-md-8 col-md-offset-2 mx-auto">
 				<form class="form-horizontal" method="post"
 					th:action="createComment">
 					<!--<input type="hidden" th:name="${_csrf.parameterName}"
 						th:value="${_csrf.token}" />-->
-					<fieldset>
-						<legend th:text="'New Comment'">New Comment</legend>
+					
+					
+					
+					
+					
+					
+					<div class="card text-dark">
+						<div class="bg-dark card-header">
+							<strong th:text="'New Comment'">New Comment</strong>
 
-						<!-- --------------  Text ---------------- -->
-						<div class="form-group">
+						</div>
+						<div class="card-body">
+							<div class="float-left container">
+
+								<div class="form-group">
 							<label for="commentText" class="col-md-2 control-label">
 								Text </label>
 							<div class="col-md-10">
@@ -42,7 +52,15 @@
 							</div>
 						</div>
 
-					</fieldset>
+
+							</div>
+						</div>
+					</div>
+					
+					
+					
+					
+					
 				</form>
 			</div>
 		</div>
