--- a/WebContent/WEB-INF/templates/editGrocery.html
+++ b/WebContent/WEB-INF/templates/editGrocery.html
@@ -13,54 +13,65 @@
 	rel="stylesheet">
 </head>
 
-<body>
-	<div class="container" role="main">
-		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
+<body class="bg-dark">
+	<div class="container bg-dark" role="main">
+		
+			<div class="col-md-8 col-md-offset-2 mx-auto">
 				<form class="form-horizontal" method="post"
 					th:action="${grocery} ? @{/changeGrocery(id=${grocery.id})} : @{/createNewGroceryItem}">
 					<!--<input type="hidden" th:name="${_csrf.parameterName}"
 						th:value="${_csrf.token}" />-->
-					<fieldset>
-						<legend th:text="${grocery}? 'Change Grocery' : 'New Grocery'">New
-							Grocery</legend>
 
-						<!-- --------------  Name ---------------- -->
-						<div class="form-group">
-							<label for="groceryName" class="col-md-2 control-label">
-								Name </label>
-							<div class="col-md-10">
-								<input class="form-control" type="text" name="groceryName"
-									th:value="${grocery} ? ${grocery.groceryName}">
+					<div class="card text-dark">
+						<div class="bg-dark card-header">
+							<strong th:text="${grocery}? 'Change Grocery' : 'New Grocery'">New
+								Grocery</strong>
+
+						</div>
+						<div class="card-body">
+							<div class="float-left container">
+
+								<div class="form-group">
+									<label for="groceryName" class="col-md-2 control-label">
+										Name </label>
+									<div class="col-md-10">
+										<input class="form-control" type="text" name="groceryName"
+											th:value="${grocery} ? ${grocery.groceryName}">
+									</div>
+								</div>
+
+								<!-- Checkbox Bought  --->
+								<div class="form-group">
+									<label for="inputAvailable" class="col-md-2 control-label">Bought
+									</label>
+									<div class="col-md-10">
+
+										<input th:checked="${grocery} ? ${grocery.bought}"
+											class=form-control type="checkbox" name="boughtstate">
+
+									</div>
+								</div>
+
+
+
 							</div>
 						</div>
+					</div>
+				
+			
 
-						<!-- Checkbox Bought  --->
-						<div class="form-group">
-							<label for="inputAvailable" class="col-md-2 control-label">Bought
-							</label>
-							<div class="col-md-10">
-
-								<input  th:checked= "${grocery} ? ${grocery.bought}" class=form-control
-									type="checkbox" name="boughtstate">
-
-							</div>
-						</div>
-
-
-
-						<!-- --------------  buttons ---------------- -->
-						<div class="form-group">
-							<div class="col-md-10 col-md-offset-2">
-								<button type="submit" class="btn btn-primary">Submit</button>
-								<a href="showGroceryList" class="btn btn-default"> Cancel </a>
-							</div>
-						</div>
-
-					</fieldset>
-				</form>
+			<!-- --------------  buttons ---------------- -->
+			<div class="form-group mx-auto">
+				<div class="col-md-10 col-md-offset-2">
+					<button type="submit" class="btn btn-dark">Submit</button>
+					<a href="showGroceryList" class="btn btn-default"> Cancel </a>
+				</div>
 			</div>
+			
+			
+			</form>
 		</div>
+	</div>
 
 	</div>
 	<!--  End of container -->
