--- a/WebContent/WEB-INF/templates/editTodo.html
+++ b/WebContent/WEB-INF/templates/editTodo.html
@@ -13,19 +13,29 @@
 	rel="stylesheet">
 </head>
 
-<body>
-	<div class="container" role="main">
+<body class="bg-dark">
+	<div class="container bg-dark" role="main">
 		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
+		
+
+
+
+<div class="col-md-8 col-md-offset-2 mx-auto">
 				<form class="form-horizontal" method="post"
 					th:action="${todo} ? @{/changeTodo(id=${todo.id})} : @{/addTodo}">
 					<!--<input type="hidden" th:name="${_csrf.parameterName}"
 						th:value="${_csrf.token}" />-->
-					<fieldset>
-						<legend th:text="${todo}? 'Change Todo' : 'New Todo'">New
-							Todo</legend>
 
-						<!-- --------------  Name ---------------- -->
+					<div class="card text-dark">
+						<div class="bg-dark card-header">
+							<strong th:text="${todo}? 'Change Todo' : 'New Todo'">New
+							Todo</strong>
+
+						</div>
+						<div class="card-body">
+							<div class="float-left container">
+
+								<!-- --------------  Name ---------------- -->
 						<div class="form-group">
 							<label for="todoName" class="col-md-2 control-label">
 								Name </label>
@@ -69,10 +79,15 @@
 							</div>
 						</div>
 
-					</fieldset>
-				</form>
-			</div>
-		</div>
+
+							</div>
+						</div>
+					</div>
+
+
+
+
+
 
 	</div>
 	<!--  End of container -->
