--- a/WebContent/WEB-INF/templates/editUser.html
+++ b/WebContent/WEB-INF/templates/editUser.html
@@ -11,14 +11,18 @@
 	rel="stylesheet">
 </head>
 
-<body>
-	<div class="container" role="main">
-		<div class="row">
+<body class="bg-dark">
+	<div class="container bg-dark" role="main">
+		
 			<div class="col-md-8 col-md-offset-2">
 				<form class="form-horizontal" method="post"
 					th:action="${user} ? @{/changeUser(id=${user.id})} : @{/addNewUser}">
 					<!--<input type="hidden" th:name="${_csrf.parameterName}"
 						th:value="${_csrf.token}" />-->
+					
+					
+					
+					
 					<fieldset>
 						<legend th:text="${user}? 'Change User' : 'New User'">New
 							User</legend>
